--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ body {
   max-width: var(--wrapper);
   margin: 0 auto;
   overflow: hidden;
+  min-height: 500rem;
   background-color: var(--primary-color);
 }
 
@@ -108,6 +109,8 @@ body {
   position: absolute;
   width: 100%;
   z-index: 100;
+  -webkit-animation: header 0.7s ease-in forwards;
+          animation: header 0.7s ease-in forwards;
   padding: 0 20rem;
 }
 
@@ -134,7 +137,13 @@ body {
 }
 
 .header .header__content .logo span {
+  opacity: 0;
+  -webkit-animation: fadeIn 0.5s ease-in forwards;
+          animation: fadeIn 0.5s ease-in forwards;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
   padding-right: 1rem;
+  font-size: 4rem;
   background: -webkit-gradient(linear, left top, right top, from(var(--orange-color)), to(var(--red-color)));
   background: linear-gradient(to right, var(--orange-color), var(--red-color));
   border-bottom-right-radius: 50%;
@@ -208,6 +217,11 @@ body {
 }
 
 .banner .banner__content {
+  opacity: 0;
+  -webkit-animation: fadeIn 1s ease-in forwards;
+          animation: fadeIn 1s ease-in forwards;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
   position: absolute;
   width: 100%;
   top: 50%;
@@ -259,7 +273,7 @@ body {
   position: absolute;
   width: 50rem;
   height: 70rem;
-  top: 70%;
+  top: 75%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
@@ -267,7 +281,11 @@ body {
 .banner #banner-1 {
   opacity: 0.8;
   mix-blend-mode: hard-light;
-  left: 0;
+  left: -50rem;
+  -webkit-animation: banner1 0.3s ease forwards;
+          animation: banner1 0.3s ease forwards;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
 }
 
 .banner #banner-2 {
@@ -275,8 +293,12 @@ body {
   width: 60rem;
   height: 60rem;
   mix-blend-mode: soft-light;
-  right: -12rem;
-  top: 55%;
+  right: -60rem;
+  top: 60%;
+  -webkit-animation: banner2 0.3s ease forwards;
+          animation: banner2 0.3s ease forwards;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
 }
 
 .banner svg {
@@ -347,6 +369,7 @@ body {
 }
 
 .about .about__content {
+  display: none;
   position: relative;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -526,11 +549,13 @@ body {
           box-shadow: 0.1rem 0.1rem 1.6rem var(--orange-color), -0.1rem -0.1rem 1.6rem var(--orange-color), 0.2rem 0.2rem 1.6rem var(--orange-color), -0.2rem -0.2rem 1.6rem var(--orange-color);
 }
 
+.about .about__content:last-child {
+  display: none;
+}
+
 .about .about__content:last-child .content__right {
-  -webkit-animation: fadeIn 2s forwards ease-in-out;
-          animation: fadeIn 2s forwards ease-in-out;
-  -webkit-animation-delay: 6s;
-          animation-delay: 6s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
 }
 
 .about .about__content:last-child .content__left {
@@ -563,8 +588,6 @@ body {
   left: unset;
   right: -30rem;
   bottom: 0;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
 }
 
 .about .about__content:last-child .content__left span:nth-of-type(2) {
@@ -574,8 +597,6 @@ body {
   top: unset;
   bottom: 0;
   height: 0;
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
 }
 
 .about .about__content .icon {
@@ -672,6 +693,84 @@ body {
   }
   to {
     height: 25rem;
+  }
+}
+
+@-webkit-keyframes header {
+  0% {
+    top: -20rem;
+  }
+  80% {
+    top: 0;
+  }
+  90% {
+    top: -1rem;
+  }
+  95% {
+    top: 0;
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes header {
+  0% {
+    top: -20rem;
+  }
+  80% {
+    top: 0;
+  }
+  90% {
+    top: -1rem;
+  }
+  95% {
+    top: 0;
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@-webkit-keyframes banner1 {
+  from {
+    left: -50rem;
+  }
+  to {
+    left: 0;
+  }
+}
+
+@keyframes banner1 {
+  from {
+    left: -50rem;
+  }
+  to {
+    left: 0;
+  }
+}
+
+@-webkit-keyframes banner2 {
+  from {
+    right: -60rem;
+  }
+  to {
+    right: -10rem;
+  }
+}
+
+@keyframes banner2 {
+  from {
+    right: -60rem;
+  }
+  to {
+    right: -10rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
