--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,8 +26,8 @@
       span {
         opacity: 0;
 
-        animation: fadeIn 0.5s ease-in forwards;
-        animation-delay: 1.5s;
+        animation: fadeIn 1s ease-in forwards;
+        animation-delay: 2s;
         padding-right: 1rem;
         font-size: 4rem;
         background: linear-gradient(
@@ -44,6 +44,7 @@
       gap: 6rem;
       .menu__item {
         position: relative;
+        opacity: 0.8;
         a {
           transition: 0.3s;
           transform-origin: center;
@@ -70,21 +71,9 @@
         }
 
         &:hover {
+          opacity: 1;
           &::after {
             width: 120%;
-          }
-          a {
-            background: linear-gradient(
-              to right,
-              var(--orange-color),
-              var(--red-color)
-            );
-
-            background-clip: text;
-
-            -webkit-background-clip: text;
-
-            -webkit-text-fill-color: transparent;
           }
         }
       }
@@ -92,6 +81,9 @@
   }
 
   &::before {
+    opacity: 0;
+    animation: fadeIn2 1s ease-in forwards;
+    animation-delay: 1.5s;
     content: "";
     z-index: -1;
     overflow: auto;
@@ -99,7 +91,6 @@
     width: 100rem;
     height: 70rem;
     left: 50%;
-    opacity: 0.2;
     transform: translate(-50%, -30rem);
 
     background: radial-gradient(
@@ -119,7 +110,7 @@
   .banner__content {
     opacity: 0;
     animation: fadeIn 1s ease-in forwards;
-    animation-delay: 1.5s;
+    animation-delay: 2s;
     position: absolute;
     width: 100%;
     top: 50%;
@@ -214,51 +205,26 @@
   }
 }
 .about {
-  padding-top: 45rem;
+  padding-top: 40rem;
   position: relative;
 
-  &::before {
-    content: "";
-
-    position: absolute;
-    width: 100rem;
-    height: 70rem;
-    opacity: 0.3;
+  .sub-bg:nth-of-type(2) {
     left: -50rem;
-    background: radial-gradient(
-      circle,
-      var(--orange-color) 0%,
-      var(--red-color) 0%,
-      transparent 60%
-    );
   }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100rem;
-    height: 70rem;
-    opacity: 0.3;
-    z-index: 1;
+  .sub-bg:nth-of-type(3) {
     right: -50rem;
     bottom: 0;
-    background: radial-gradient(
-      circle,
-      var(--orange-color) 0%,
-      var(--red-color) 0%,
-      transparent 60%
-    );
   }
+
   #sub-bg {
     position: absolute;
     width: 100%;
     top: 0;
     height: 15rem;
-    border-bottom-right-radius: 30%;
     background: linear-gradient(
       to bottom,
       var(--orange-color),
-      transparent 90%
+      transparent 100%
     );
 
     &::before {
@@ -275,50 +241,15 @@
     }
   }
 
-  .about__content {
-    display: none;
-    position: relative;
-    align-items: center;
-    margin-bottom: 40rem;
-    z-index: 2;
+  .about__content[data-scroll="in"] {
+    opacity: 1;
+    top: 0;
+    .icon {
+      animation: background 1s forwards;
 
+      animation-delay: 3s;
+    }
     .content__left {
-      width: 30%;
-
-      h2 {
-        font-family: var(--title-font);
-        font-size: 4rem;
-
-        background: linear-gradient(
-          to right,
-          var(--white-color),
-          var(--gray-color)
-        );
-
-        color: transparent;
-        background-clip: text;
-
-        -webkit-background-clip: text;
-      }
-
-      p {
-        background: linear-gradient(
-          to right,
-          var(--white-color),
-          var(--gray-color)
-        );
-
-        color: transparent;
-        background-clip: text;
-
-        -webkit-background-clip: text;
-        margin: 4rem 0;
-      }
-
-      span {
-        transition: 0.3s;
-      }
-
       span:nth-of-type(1) {
         position: absolute;
         width: 0;
@@ -340,7 +271,7 @@
       span:nth-of-type(2) {
         position: absolute;
         width: 1rem;
-        left: 44%;
+        left: 43.5%;
         top: 0;
         background: linear-gradient(
           to right,
@@ -355,15 +286,44 @@
     }
 
     .content__right {
+      animation: fadeIn 2s forwards ease;
+
+      animation-delay: 3.5s;
+    }
+  }
+
+  .about__content {
+    position: relative;
+    align-items: center;
+    margin-bottom: 40rem;
+    z-index: 2;
+    transition: all 0.5s;
+    opacity: 0;
+    top: 20rem;
+
+    .content__left {
+      width: 30%;
+      .title_sec,
+      .desc_sec {
+        background: linear-gradient(
+          to right,
+          var(--white-color),
+          var(--gray-color)
+        );
+
+        color: transparent;
+        background-clip: text;
+
+        -webkit-background-clip: text;
+      }
+    }
+
+    .content__right {
       position: relative;
       width: 60rem;
       height: 60rem;
 
       opacity: 0;
-
-      animation: fadeIn 2s forwards ease-in-out;
-
-      animation-delay: 3s;
       img {
         position: absolute;
         width: 100%;
@@ -472,30 +432,12 @@
     }
 
     &:last-child {
-      display: none;
-      .content__right {
-        animation-delay: 3s;
-      }
+      margin-bottom: 25rem;
 
       .content__left {
-        height: 100%;
         text-align: right;
-        h2 {
-          font-family: var(--title-font);
-          font-size: 4rem;
 
-          background: linear-gradient(
-            to left,
-            var(--white-color),
-            var(--gray-color)
-          );
-
-          color: transparent;
-          background-clip: text;
-
-          -webkit-background-clip: text;
-        }
-
+        h2,
         p {
           background: linear-gradient(
             to left,
@@ -507,7 +449,6 @@
           background-clip: text;
 
           -webkit-background-clip: text;
-          margin: 4rem 0;
         }
 
         span:nth-of-type(1) {
@@ -535,13 +476,12 @@
       height: 12rem;
       margin: 0 15rem;
       z-index: 2;
-
+      opacity: 0.2;
       background: linear-gradient(
         to right,
-        var(--orange-color),
-        var(--red-color)
+        var(--second-color),
+        var(--second-color)
       );
-
       border-radius: 50%;
       svg {
         position: relative;
@@ -555,6 +495,71 @@
           fill: var(--white-color);
         }
       }
+    }
+  }
+}
+
+.video {
+  position: relative;
+  top: 20rem;
+  opacity: 0;
+  transition: 0.5s;
+  &[data-scroll="in"] {
+    top: 0rem;
+    opacity: 1;
+  }
+  .sub-bg {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .video__content {
+    text-align: center;
+    .text {
+      margin: 0 auto;
+      width: 30%;
+
+      .title_sec {
+        background: linear-gradient(
+          to top,
+          var(--white-color),
+          var(--gray-color)
+        );
+
+        color: transparent;
+        background-clip: text;
+
+        -webkit-background-clip: text;
+      }
+
+      p {
+        color: var(--white-color);
+        margin-bottom: 10rem;
+      }
+    }
+
+    .media {
+      position: relative;
+      border: 1rem solid var(--second-color);
+      border-radius: 10rem;
+      overflow: hidden;
+    }
+    video {
+      width: 80%;
+
+      object-fit: cover;
+    }
+
+    i {
+      position: absolute;
+      width: 10rem;
+      height: 10rem;
+      top: 50%;
+      left: 50%;
+
+      transform: translate(-50%, -50%);
+
+      font-size: 10rem;
+      color: var(--red-color);
     }
   }
 }
